--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,6 +25,10 @@
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
           我的餐廳清單
         </a>
+        <div class="d-flex justify-content-start" style="width: 250px;">
+          <a href="/restaurants/new" class="btn btn-outline-primary ">Create</a>
+          {{!-- <a class="btn btn-major" href="/restaurants/new"><i class="fa-solid fa-plus"></i></a> --}}
+        </div>
       </div>
     </nav>
     <div class="banner"></div>
@@ -34,7 +38,8 @@
 
   {{!-- 導入 Bootstrap.js--}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
