feat: add method-override

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,5 +1,5 @@
 <div class="container mt-5 w-50">
-  <form action="/restaurants/{{restaurant._id}}/edit" method="POST">
+  <form action="/restaurants/{{restaurant._id}}?_method=PUT" method="POST">
     <h2>修改餐廳資訊</h2>
     <div class="mb-3">
       <label for="restaurant_id" class="form-label">編號</label>
