--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,7 +54,7 @@
             <a href="/restaurants/{{this._id}}/edit" class="btn btn-outline-primary btn-sm">Edit</a>
             <a href="/restaurants/{{this._id}}" class="btn btn-outline-primary btn-sm ms-2">Detail</a>
             {{!-- id改成_id --}}
-            <form action="/restaurants/{{this._id}}/delete" method="POST">
+            <form action="/restaurants/{{this._id}}?_method=DELETE" method="POST">
               <button type="submit" class="btn btn-outline-danger btn-sm ms-2">Delete</button>
             </form>
           </div>
