--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -6,7 +6,7 @@
       <div class="mb-2 d-flex justify-content-start">
         <a href="/" class="btn btn-outline-success btn-sm ms-2 me-2">Back</a>
         <a href="/restaurants/{{restaurant._id}}/edit" class="btn btn-outline-primary btn-sm">Edit</a>
-        <form action="/restaurants/{{restaurant._id}}/delete" method="POST">
+        <form action="/restaurants/{{restaurant._id}}?_method=DELETE" method="POST">
           <button type="submit" class="btn btn-outline-danger btn-sm ms-2">Delete</button>
         </form>
       </div>
