--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,25 +4,26 @@
 
       <h1 class="text-center">Register Page</h1>
 
-      <form action="/users/login" method="POST">
+      <form action="/users/register" method="POST">
         <div class="mb-3">
           <label for="name" class="mb-2">User's Name</label>
-          <input type="text" class="form-control" id="name" name="name" placeholder="Your  Name">
+          <input type="text" class="form-control" id="name" name="name" placeholder="Your  Name" value="{{name}}">
         </div>
 
         <div class="mb-3">
           <label for="email" class="mb-2">Email</label>
-          <input type="email" class="form-control" id="email" name="email" placeholder="Your email">
+          <input type="email" class="form-control" id="email" name="email" placeholder="Your email" value="{{email}}">
         </div>
 
         <div class="mb-3">
           <label for="password" class="mb-2">Password</label>
-          <input type="password" class="form-control" id="password" name="password" placeholder="Your password">
+          <input type="password" class="form-control" id="password" name="password" placeholder="Your password" value="{{password}}">
         </div>
 
         <div class="mb-3">
           <label for="confirmPassword" class="mb-2">Confirm Password</label>
-          <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm password">
+          <input type="password" class="form-control" id="confirmPassword" name="confirmPassword"
+            placeholder="Confirm password" value="{{confirmPassword}}">
         </div>
 
         <div class="d-grid gap-2">
