feat: add features: logout, user authentication, and add isAuthenticated to display view templates

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,13 @@
           我的餐廳清單
         </a>
         <div class="d-flex justify-content-start" style="width: 250px;">
-          <a href="/restaurants/new" class="btn btn-outline-primary ">Create</a>
+          {{#if isAuthenticated}}
+          <a href="/restaurants/new" class="btn btn-outline-primary">Create</a>
+          <a href="/users/logout" class="btn btn-outline-warning mx-2">Logout</a>
+          {{else}}
+          <a href="/users/login" class="btn btn-outline-primary ">Login</a>
+          {{/if}}
+          {{!-- <a href="/restaurants/new" class="btn btn-outline-primary ">Create</a> --}}
           {{!-- <a class="btn btn-major" href="/restaurants/new"><i class="fa-solid fa-plus"></i></a> --}}
         </div>
       </div>
