add login failure flash messages

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,12 +8,12 @@
       <form action="/users/login" method="POST">
         <div class="mb-3">
           <label for="email" class="mb-2">Email</label>
-          <input type="email" class="form-control" id="email" name="email" placeholder="Your email">
+          <input type="email" class="form-control" id="email" name="email" placeholder="Your email" required >
         </div>
 
         <div class="mb-3">
           <label for="password" class="mb-2">Password</label>
-          <input type="password" class="form-control" id="password" name="password" placeholder="Your password">
+          <input type="password" class="form-control" id="password" name="password" placeholder="Your password" required >
         </div>
 
         <div class="d-grid gap-2">
