--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -2,13 +2,38 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
-      
+
       <div class="mb-2 d-flex justify-content-start">
         <a href="/" class="btn btn-outline-success btn-sm ms-2 me-2">Back</a>
         <a href="/restaurants/{{restaurant._id}}/edit" class="btn btn-outline-primary btn-sm">Edit</a>
-        <form action="/restaurants/{{restaurant._id}}?_method=DELETE" method="POST">
-          <button type="submit" class="btn btn-outline-danger btn-sm ms-2">Delete</button>
-        </form>
+        {{!-- 新增刪除確認提問訊息 (target要用id連接)--}}
+        <button type="button" class="btn btn-outline-danger btn-sm ms-2" data-bs-toggle="modal"
+          data-bs-target="#deleteRest{{restaurant._id}}">
+          Delete
+        </button>
+        {{!--彈出視窗 --}}
+        <div class="modal fade" id="deleteRest{{restaurant._id}}" tabindex="-1" aria-labelledby="deleteRestaurantLabel"
+          aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="deleteRestaurantLabel">確認刪除</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                請問是否確定刪除 {{restaurant.name}} ？
+              </div>
+              <div class="modal-footer">
+                <form action="/restaurants/{{restaurant._id}}?_method=DELETE" method="POST">
+                  <button type="submit" class="btn btn-outline-danger btn-sm ms-2">刪除</button>
+                </form>
+                <button type="button" class="btn btn-outline-secondary btn-sm ms-2" data-bs-dismiss="modal">返回</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </div>
 
       <p class="mb-1">
